fix messenger component (block coversation error)

--- a/styles/components/messenger/PeopleSec.module.css
+++ b/styles/components/messenger/PeopleSec.module.css
@@ -40,6 +40,7 @@
     cursor: pointer;
     width: 100%;
     padding:15px;
+    position: relative;
 }
 
 .peopleSec .people .person:hover{
@@ -68,6 +69,22 @@
     margin-top:5px;
     font-size:13px;
     font-weight: 300;
+}
+
+.peopleSec .people .person .patch{
+    position: absolute;
+    right:20px;
+}
+
+.peopleSec .people .person .patch::after{
+    position: absolute;
+    content:"";
+    top:0;
+    left:0;
+    width:7px;
+    height:7px;
+    border-radius: 50%;
+    background-color: #0295F6;
 }
 
 .peopleSec .people .spinner{
